fix guidance page for /v1

--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -59,7 +59,7 @@
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v1/views/guidance-2019">Version 01</a></dt>
+        <dt><a href="/water/v1/guidance-2019">Version 01</a></dt>
         <dd>Alpha sprint 3 - small grants service</dd>
       </dl>
 
