--- a/app/views/water/v1/guidance-2019.html
+++ b/app/views/water/v1/guidance-2019.html
@@ -1,5 +1,5 @@
 
-{% extends "./layouts/GUIDANCE.html" %}
+{% extends "./views/layouts/GUIDANCE.html" %}
 
 {% block guidance %}
 
@@ -72,7 +72,7 @@
 
 <p>Farmers (including livestock, dairy, arable and horticultural sectors) can apply for this grant. Please read the Round 2 handbook below to find out more. This scheme is only open to farmers based in England.</p>
 
-<p><a rel="external" href="../../public/CPSG_Scheme_Handbook_Round_2_V3.0.pdf">Countryside Productivity Small Grant Scheme (CPSG) Round 2 Handbook</a> (PDF, 854KB, 83 pages)</p>
+<p><a rel="external" href="../../../../public/CPSG_Scheme_Handbook_Round_2_V3.0.pdf">Countryside Productivity Small Grant Scheme (CPSG) Round 2 Handbook</a> (PDF, 854KB, 83 pages)</p>
 
 <h3 id="when-you-can-apply">When you can apply</h3>
 
