--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -19,47 +19,47 @@
       </h1>
 
       <dl class="govuk-list">
-        <dt><a href="/water/current/guidance">Version 07</a></dt>
+        <dt><a href="/water/current/guidance">Version 7</a></dt>
         <dd>Beta - Public</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v7-privateBeta/guidance-all-grants">Version 07</a></dt>
+        <dt><a href="/water/v7-privateBeta/guidance-all-grants">Version 7</a></dt>
         <dd>Beta - Private</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v6/guidance-all-grants">Version 06</a></dt>
+        <dt><a href="/water/v6/guidance-all-grants">Version 6</a></dt>
         <dd>Alpha extension</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v5/guidance-all-grants">Version 05</a></dt>
+        <dt><a href="/water/v5/guidance-all-grants">Version 5</a></dt>
         <dd>Alpha extension</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v4+/guidance-all-grants">Version 04.5</a></dt>
+        <dt><a href="/water/v4b/guidance-all-grants">Version 4 beta</a></dt>
         <dd>Alpha extension</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v4/guidance-all-grants">Version 04</a></dt>
+        <dt><a href="/water/v4/guidance-all-grants">Version 4</a></dt>
         <dd>Alpha sprint XXXX - large grants expression of interest v3</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v3/guidance-all-grants">Version 03</a></dt>
+        <dt><a href="/water/v3/guidance-all-grants">Version 3</a></dt>
         <dd>Alpha sprint 6 - large grants expression of interest v2</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v2/views/start">Version 02</a></dt>
+        <dt><a href="/water/v2/views/start">Version 2</a></dt>
         <dd>Alpha sprint 5 - large grants expression of interest</dd>
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v1/guidance-2019">Version 01</a></dt>
+        <dt><a href="/water/v1/guidance-2019">Version 1</a></dt>
         <dd>Alpha sprint 3 - small grants service</dd>
       </dl>
 
