--- a/app/views/water/v6/guidance-large-water.html
+++ b/app/views/water/v6/guidance-large-water.html
@@ -71,7 +71,7 @@
 </ul>
 <br/>
 <p>
-<a href="./views/water/start">Check if you can apply and how well your project fits the funding priorities.</a>
+<a href="start">Check if you can apply and how well your project fits the funding priorities.</a>
 </p>
 
 
