--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -54,7 +54,7 @@
       </dl>
 
       <dl class="govuk-list">
-        <dt><a href="/water/v2/views/start">Version 2</a></dt>
+        <dt><a href="/water/v2/start">Version 2</a></dt>
         <dd>Alpha sprint 5 - large grants expression of interest</dd>
       </dl>
 
