--- a/app/views/water/v2/new-business.html
+++ b/app/views/water/v2/new-business.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Has this project been granted planning permission?
+  Has the business been trading for less than two years?
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="planning-required">Back</a>
+  <a class="govuk-back-link" href="business">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,25 +13,25 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../routes/planning-permission-answer" method="post">
+      <form class="form" action="business-answer" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset">
+          <fieldset class="govuk-fieldset" aria-describedby="new-business-hint">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Has this project been granted planning permission?
+                Has the business been trading for more than two years?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="yes" {{ checked("planning-permission", "yes") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-permission">
+                <input class="govuk-radios__input" id="new-business" name="new-business" type="radio" value="yes" {{ checked("new-business", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="new-business">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="no" {{ checked("planning-permission", "no") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-permission-2">
+                <input class="govuk-radios__input" id="new-business-2" name="new-business" type="radio" value="no" {{ checked("new-business", "no") }}>
+                <label class="govuk-label govuk-radios__label" for="new-business-2">
                   No
                 </label>
               </div>
