--- a/app/views/water/v2/planning-permission.html
+++ b/app/views/water/v2/planning-permission.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Is this project likely to be granted planning permission within the next six months?
+  Has this project been granted planning permission?
 {% endblock %}
 
 {% block beforeContent %}
@@ -13,25 +13,25 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../routes/planning-progress-answer" method="post">
+      <form class="form" action="planning-permission-answer" method="post">
 
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Is this project likely to be granted planning permission within the next six months?
+                Has this project been granted planning permission?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-progress" name="planning-progress" type="radio" value="yes" {{ checked("planning-progress", "yes") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-progress">
+                <input class="govuk-radios__input" id="planning-permission" name="planning-permission" type="radio" value="yes" {{ checked("planning-permission", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="planning-permission">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="planning-progress-2" name="planning-progress" type="radio" value="no" {{ checked("planning-progress", "no") }}>
-                <label class="govuk-label govuk-radios__label" for="planning-progress-2">
+                <input class="govuk-radios__input" id="planning-permission-2" name="planning-permission" type="radio" value="no" {{ checked("planning-permission", "no") }}>
+                <label class="govuk-label govuk-radios__label" for="planning-permission-2">
                   No
                 </label>
               </div>
