--- a/app/views/water/v2/tenancy-length.html
+++ b/app/views/water/v2/tenancy-length.html
@@ -1,11 +1,11 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-  Has the business been trading for less than two years?
+  Does your tenancy extend beyond six years?
 {% endblock %}
 
 {% block beforeContent %}
-  <a class="govuk-back-link" href="business">Back</a>
+  <a class="govuk-back-link" href="tenancy">Back</a>
 {% endblock %}
 
 {% block content %}
@@ -13,25 +13,25 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form" action="../routes/business-answer" method="post">
+      <form class="form" action="tenancy-length-answer" method="post">
 
         <div class="govuk-form-group">
-          <fieldset class="govuk-fieldset" aria-describedby="new-business-hint">
+          <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
               <h1 class="govuk-fieldset__heading">
-                Has the business been trading for more than two years?
+                Does the tenancy last until 2026 or after?
               </h1>
             </legend>
             <div class="govuk-radios govuk-radios--inline">
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="new-business" name="new-business" type="radio" value="yes" {{ checked("new-business", "yes") }}>
-                <label class="govuk-label govuk-radios__label" for="new-business">
+                <input class="govuk-radios__input" id="tenancy-length" name="tenancy-length" type="radio" value="yes" {{ checked("tenancy-length", "yes") }}>
+                <label class="govuk-label govuk-radios__label" for="tenancy-length">
                   Yes
                 </label>
               </div>
               <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="new-business-2" name="new-business" type="radio" value="no" {{ checked("new-business", "no") }}>
-                <label class="govuk-label govuk-radios__label" for="new-business-2">
+                <input class="govuk-radios__input" id="tenancy-length-2" name="tenancy-length" type="radio" value="no" {{ checked("tenancy-length", "no") }}>
+                <label class="govuk-label govuk-radios__label" for="tenancy-length-2">
                   No
                 </label>
               </div>
