--- a/app/views/water/current/views/layouts/GUIDANCEWATER.html
+++ b/app/views/water/current/views/layouts/GUIDANCEWATER.html
@@ -133,11 +133,11 @@ Check if you can apply for a Farming Transformation Fund water management grant
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
                 data-track-action="1.1 Related content" data-track-label="#"
-                data-track-options="{}" href="large-slurry">Large grants for slurry equipment</a></li>
+                data-track-options="{}" href="">Large grants for slurry equipment</a></li>
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar  gem-c-related-navigation__section-link--other" data-track-category="relatedLinkClicked"
                 data-track-action="1.2 Related content" data-track-label="#"
                 data-track-options="{}"
-                href="small-grants">Small grants for equipment to improve productivity</a></li>
+                href="">Small grants for equipment to improve productivity</a></li>
 
           </ul>
         </nav>
@@ -150,7 +150,7 @@ Check if you can apply for a Farming Transformation Fund water management grant
 
             <li class="gem-c-related-navigation__link"><a class="gem-c-related-navigation__section-link gem-c-related-navigation__section-link--sidebar" data-track-category="relatedLinkClicked" data-track-action="2.1 Collection"
                 data-track-label="#" data-track-options="{&quot;dimension28&quot;:&quot;1&quot;,&quot;dimension29&quot;:&quot;Rural payments and grants&quot;}"
-                href="all-grants">Rural payments and grants</a></li>
+                href="">Rural payments and grants</a></li>
 
           </ul>
         </nav>
