few little changes

--- a/app/views/water/current/guidance.html
+++ b/app/views/water/current/guidance.html
@@ -91,10 +91,12 @@
   <li>improve the environment</li>
   <li>improve water sustainability</li>
 </ul>
+<p>When you are happy with your score, you can submit your details to the RPA.</p>
 <p>You can go back through the checker as many times as you like but you can only submit your details once.</p>
 
 <h3>Submit a full application</h3>
 <p>The RPA will be in touch once the application period opens.</p>
+<p>They will tell you if your project scored well enough to get the full application form.</p>
 <p>If you submit a full application and it is successful, you’ll be sent a funding agreement and can begin work on the project.</p>
 </div>
 <br/>
