--- a/app/views/water/current/irrigated-land.html
+++ b/app/views/water/current/irrigated-land.html
@@ -14,35 +14,28 @@
     <div class="govuk-grid-column-two-thirds">
       <form id="mainForm" class="form" action="{{ nextUrl }}" method="post">
             <div class="govuk-form-group">
-                <h1 class="govuk-label-wrapper">
-                 <label class="govuk-label govuk-label--l" for="irrigated-land-current">
-                    How much land is currently irrigated per year?
+               <h1 class="govuk-label-wrapper govuk-!-padding-bottom-2">
+                  <label class="govuk-label govuk-label--l" for="irrigated-land-current">
+                    Will the amount of irrigated land change? 
                   </label>
                 </h1>
-                <br>
                 <div class="govuk-body govuk-!-margin-bottom-0">
-                Hectares
+                How much land is currently irrigated per year?
                 <p id="irrigated-land-current-hint" class="govuk-hint">
                   Enter figure in hectares, for example 543.5
                 </p>
                 </div>
-                <div class="govuk-input__wrapper">
+                <div class="govuk-input__wrapper govuk-!-margin-bottom-5">
                 <input class="govuk-input govuk-input--width-5" id="irrigated-land-current" name="irrigated-land-current" type="text" spellcheck="false" aria-describedby="irrigated-land-current-hint"  value="{{ data['irrigated-land-current'] }}">
                 <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                 </div>
-                <h1 class="govuk-label-wrapper">
-                  <label class="govuk-label govuk-label--l" for="irrigated-land-current">
-                    How much land will be irrigated after the project?
-                  </label>
-                </h1>
-                <br>
                 <div class="govuk-body govuk-!-margin-bottom-0">
-                    Hectares
+                   How much land will be irrigated per year after the project?
                   <p id="irrigated-land-target-hint" class="govuk-hint">
                     Enter figure in hectares, for example 543.5
                   </p>
                 </div>
-                <div class="govuk-input__wrapper">
+                <div class="govuk-input__wrapper govuk-!-margin-bottom-5">
                   <input class="govuk-input govuk-input--width-5" id="irrigated-land-target" name="irrigated-land-target" type="text" spellcheck="false" aria-describedby="irrigated-land-target-hint" value="{{ data['irrigated-land-target'] }}">
                     <div class="govuk-input__suffix" aria-hidden="true">ha</div>
                 </div>
