--- a/app/views/water/current/productivity.html
+++ b/app/views/water/current/productivity.html
@@ -9,7 +9,7 @@ productivity? {% endblock %} {% block beforeContent %}
       <div class="govuk-form-group">
         <fieldset class="govuk-fieldset">
           <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
-            <h1 class="govuk-fieldset__heading">
+            <h1 class="govuk-fieldset__heading govuk-!-margin-top-2">
               How will the project improve productivity?
             </h1>
           </legend>
