--- a/app/views/water/index.html
+++ b/app/views/water/index.html
@@ -5,6 +5,13 @@
   Grants Prototypes
 {% endblock %}
 
+{% block header %}
+  {{ super() }}
+  <div class="govuk-width-container">
+    <a class="govuk-back-link" href="/">Back</a>
+  </div>
+{% endblock %}
+
 {% block content %}
 
   <style>
