irrigation-water-source questions

--- a/app/views/water/current/irrigation-water-source.html
+++ b/app/views/water/current/irrigation-water-source.html
@@ -22,7 +22,7 @@
               </h1>
             </legend>
             <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
-            Where does your irrigation water come from currently?
+            Where does your current irrigation water come from?
             <span class="govuk-hint">Select one or two options</span>
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
@@ -69,7 +69,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
           <div class="govuk-body govuk-!-margin-bottom-0 govuk-!-padding-top-5">
-             Where will the irrigation water come from after the project has been completed?
+             Where will the irrigation water come from?
             <span class="govuk-hint">Select one or two options</span>
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
